# cmake-cross-demo

./: anotacoes.txt
CAP02/source/: CMakeLists.txt  main.cpp
CAP05/source/: CMakeLists.txt  main.cpp
CAP05/source/src/: dog.cpp
CAP07/source/: CMakeLists.txt  main.cpp
CAP07/source/include/: dog.h  operations.h
CAP07/source/logger/include/: log.h
CAP07/source/logger/src/: log.cpp
